                   Yii Framework Change Log
                   ========================

Version 1.1.31 under development
--------------------------------
- No changes yet

Version 1.1.30 October 14, 2024
--------------------------------

- Bug #4547: PHP 8 compatibility: Fix deprecation in CCaptcha when using Imagick extension (apphp)
- Bug #4541: PHP 8 compatibility: Fix deprecation in MarkdownParser (mdeweerd)
- Bug #4544: PHP 8 compatibility: Fix deprecation in CLocale (apphp)
- Bug #4566: PHP 8 compatibility: Fix passing null to string parameter parameter (apphp)
- Bug #4563: CVE-2021-20086. Prevent prototype pollution in jquert-bbq (kevin-foster-uk)
- Enh #4552: Added support for PHP 8.3 (sandippingle, ThePepster, marcovtwout)
- Enh #4559: Added support for Redis ACL authentication with username for Redis 6+ (arfeen)
- Enh #4568: Add missing hungarian translations (albertborsos)

Version 1.1.29 November 14, 2023
--------------------------------

- Bug #4516: PHP 8 compatibility: Allow union types and intersection types in action declarations (wtommyw)
- Bug #4523: Fixed translated in Greek class messages in framework requirements view, which they should not be translated (lourdas)
- Bug #4534: PHP 8.2 compatibility: Fix deprecated dynamic properties in gii/components/Pear/Text/Diff (mdeweerd, marcovtwout)
- Bug: CVE-2023-47130. Prevent RCE when deserializing untrusted user input (ma4ter222, marcovtwout)
- Enh #4529: Exceptions thrown while loading fixture file rows now contain more details (eduardor2k)
- Enh #4533: Various refactorings applied based on PHAN checks (marcovtwout)

Version 1.1.28 February 28, 2023
--------------------------------

- Bug #4484: Set Last-Modified after sending cache control headers (jannis701, wtommyw)
- Bug #4491: Fixed limit and Offset not working correctly with MSSQL version 11 (2012) and newer (shnoulle, wtommyw)
- Bug #4497: PHP 8.1 compatibility: Fix unserialize null in CRedisCache (kenguest, wtommyw)